<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
          
    <!-- New Profile -->
    <item android:id="@+id/action_new_profile"
          android:title="@string/action_new_profile"
          android:showAsAction="never" />
    
    <!-- Delete Profile -->
    <item android:id="@+id/action_delete_profile"
          android:title="@string/action_delete_profile"
          android:showAsAction="never" />
    
    <!-- Change Profile -->
    <item android:id="@+id/action_switch_profile"
          android:title="@string/action_switch_profile"
          android:showAsAction="never" />
    
    <!-- Tutorial -->
    <item android:id="@+id/action_show_tutorial"
          android:title="@string/action_show_tutorial"
          android:showAsAction="never" />
    
    
</menu>

<!-- android:icon="@drawable/ic_action_refresh"
android:title="@string/action_tutorial"-->