<?xml version="1.0" encoding="utf-8"?>
<!-- SudoQ is a Sudoku-App for Adroid Devices with Version 2.2 at least. -->
<!-- Copyright (C) 2012  Haiko Klare, Julian Geppert, Jan-Bernhard Kordaß, Jonathan Kieling, Tim Zeitz, Timo Abele -->
<!-- This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.  -->
<!-- This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:background="@drawable/background_serious" >
    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="35dp"
	        android:gravity="center"
	        android:layout_margin="10dp"
	        android:textAppearance="@android:style/TextAppearance.Large" 
	        android:text="@string/title_mainmenu"
	        android:textColor="@android:color/black" />
	
	    <Button
	        android:id="@+id/button_mainmenu_new_sudoku"
	        style="@style/style_mainmenu_buttons"
	        android:text="@string/sf_mainmenu_new_sudoku"
	        android:onClick="switchActivity" />
	
	    <Button
	        android:id="@+id/button_mainmenu_continue"
	        style="@style/style_mainmenu_buttons"
	        android:text="@string/sf_mainmenu_continue"
	        android:onClick="switchActivity" />
	
	    <Button
	        android:id="@+id/button_mainmenu_load_sudoku"
	        style="@style/style_mainmenu_buttons"
	        android:text="@string/sf_mainmenu_load_sudoku"
	        android:onClick="switchActivity" />
	
	    <Button
	        android:id="@+id/button_mainmenu_profile"
	        style="@style/style_mainmenu_buttons"
	        android:text="@string/sf_mainmenu_profile"
	        android:onClick="switchActivity" />
	
	</LinearLayout>
</ScrollView>