<?xml version="1.0" encoding="utf-8"?>
<!-- SudoQ is a Sudoku-App for Adroid Devices with Version 2.2 at least. -->
<!-- Copyright (C) 2012  Haiko Klare, Julian Geppert, Jan-Bernhard Kordaß, Jonathan Kieling, Tim Zeitz, Timo Abele -->
<!-- This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.  -->
<!-- This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sudoku_frame_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:background="@drawable/background_serious" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!--whole SudokuField-->
        <LinearLayout
            android:id="@+id/sudoku_border"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <de.sudoq.view.FullScrollLayout
                android:id="@+id/sudoku_field"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical" >
            </de.sudoq.view.FullScrollLayout>
        </LinearLayout>

        <!-- is is the former annoying white stripe. I dont' know why it is there, but ichanged it to gray to better blend in -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:orientation="vertical"
            android:background="@drawable/background_serious" />
    
        <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_weight="2.5"
           android:orientation="horizontal"
           android:background="#282828" >
    
           <!--Buttons-->
           <LinearLayout 
               android:id="@+id/controls"
               android:layout_width="wrap_content"
               android:layout_height="fill_parent"
               android:orientation="horizontal">
               
               <!--BigButtons-->
               <LinearLayout
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingTop="5dp">
      
                  <de.sudoq.view.SquareImageButton
                      android:id="@+id/button_sudoku_help"
                      android:padding="7dp"
                      android:scaleType="fitXY"
                      android:layout_width="1dp"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:layout_margin="0dp"
                      android:onClick="onClick"
                      android:src="@drawable/help" />
                    
                  <de.sudoq.view.SquareImageButton
                      android:id="@+id/button_sudoku_actionTree"
                      android:padding="7dp"
                      android:scaleType="fitXY"
                      android:layout_width="1dp"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:layout_margin="0dp"
                      android:onClick="onClick"
                      android:src="@drawable/action_tree" />
               </LinearLayout>
               <!--lesserButtons-->
               <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingTop="5dp">
                    
                   <de.sudoq.view.SquareImageButton
                       android:id="@+id/button_sudoku_undo"
                       android:padding="7dp"
                       android:scaleType="fitXY"
                       android:layout_width="1dp"
                       android:layout_height="fill_parent"
                       android:layout_weight="1"
                       android:layout_margin="0dp"
                       android:onClick="onClick"
                       android:src="@drawable/undo" />
    
                   <de.sudoq.view.SquareImageButton
                       android:id="@+id/button_sudoku_redo"
                       android:padding="7dp"
                       android:scaleType="fitXY"
                       android:layout_width="1dp"
                       android:layout_height="fill_parent"
                       android:layout_weight="1"
                       android:layout_margin="0dp"
                       android:onClick="onClick"
                       android:src="@drawable/redo" />
                   
                   <de.sudoq.view.SquareImageButton
                      android:id="@+id/button_sudoku_toggle_gesture"
                      android:padding="7dp"
                      android:scaleType="fitXY"
                      android:layout_width="1dp"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:layout_margin="0dp"
                      android:onClick="onClick"
                      android:src="@drawable/gesture_button_selector" />
                 
               </LinearLayout>
                        
           </LinearLayout>
          
           <de.sudoq.view.VirtualKeyboardLayout
                 android:id="@+id/virtual_keyboard"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="5dp" >
           </de.sudoq.view.VirtualKeyboardLayout>
                       
        </LinearLayout>
    </LinearLayout>
    
    <!-- Following layout is for the ActionTree and initially set invisible -->
  <RelativeLayout
      android:id="@+id/sudoku_action_tree_layout" 
      android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="#80000000"
         android:visibility="invisible" >     

      <TextView 
          android:id="@+id/sudoku_action_tree_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:textAppearance="@android:style/TextAppearance.Large" 
        android:textColor="@android:color/white"
          android:text="@string/sf_sudoku_title_action_tree" />
          
      <LinearLayout 
          android:id="@+id/sudoku_action_tree_buttons"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_alignParentBottom="true" >
        
          <Button 
              android:id="@+id/sudoku_action_tree_button_bookmark"
              android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:drawable/btn_default"
            android:onClick="onClick"
            android:text="@string/sf_sudoku_button_bookmark" />
          
          <Button
              android:id="@+id/sudoku_action_tree_button_close" 
              android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:drawable/btn_default"
            android:onClick="onClick"
            android:text="@string/sf_sudoku_button_close" />
          
      </LinearLayout>
      
      <de.sudoq.view.FullScrollLayout
             android:id="@+id/sudoku_action_tree_scroll"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_above="@id/sudoku_action_tree_buttons"
          android:layout_below="@id/sudoku_action_tree_title" />
      
    </RelativeLayout>
    
</FrameLayout>